# Clifin

./: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  README.md  cmake_install.cmake  main.cpp
.cache/clangd/index/: main.cpp.4FBCE7EB9C098223.idx
include/: models.h  network.h  ui.h
src/: main.cpp  network.cpp  ui.cpp
